manifest/objects/LVGO__Client_Tag__c.object
<CustomObject>
    <description>Used to tag Clients with one or more tags used for Billing and/or Reporting.</description>
    <fields>
        <fullName>LVGO__Client_Tag_Name__c</fullName>
        <label>Client Tag Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__UsedforBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__UsedforReporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used for Reporting</label>
        <type>Checkbox</type>
    </fields>
    <label>LV Client Tag</label>
    <listViews>
        <fullName>LVGO__Client_Tags</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>LVGO__UsedforBilling__c</columns>
        <columns>LVGO__UsedforReporting__c</columns>
        <filterScope>Everything</filterScope>
        <label>Client Tags</label>
    </listViews>
    <nameField>
        <label>Client Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Client Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>